--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+
+  <!-- External CSS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
+  <!-- Main CSS -->
+  <link href="./static/assets/css/style.css" rel="stylesheet">
+
+  <title>Help U</title>
 </head>
+
 <body>
-  <h1>No way! It works!</h1>
+
+  <!-- Header -->
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <div class="logo-wrapper">
+        <h1 class="logo"><a href="#">Help U</a></h1><span id="small-img-logo" class="d-none d-md-block"></span>
+      </div>
+      <!-- Navbar -->
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav>
+
+    </div>
+  </header><!-- End header -->
+
+  {% block content %}
+  <!-- Content  -->
+  {% endblock content %}
+
+  <!-- Footer -->
+  <footer id="footer">
+
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6 footer-info">
+            <h3>Help U</h3>
+            <p>
+              is a non-profit project.<br><br>
+              In no event shall the web-site be liable <br>
+              for any special, incidental, indirect, or <br>
+              consequential damages whatsoever arising out<br>
+              of or in connection with your access or use or<br>
+              inability to access or use the Service.<br>
+            </p>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bi bi-dot"></i> <a href="#">I can help.host</a></li>
+              <li><i class="bi bi-dot"></i> <a href="#">Good translator</a></li>
+              <li><i class="bi bi-dot"></i> <a href="#">List of charities</a></li>
+              <li><i class="bi bi-dot"></i> <a href="#">Donate here</a></li>
+              <li><i class="bi bi-dot"></i> <a href="#">Help Ukraine</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Our site</h4>
+            <ul>
+              <li><i class="bi bi-dot"></i> <a href="#">FAQ</a></li>
+              <li><i class="bi bi-dot"></i> <a href="#">About us</a></li>
+              <li><i class="bi bi-dot"></i> <a href="#">Contact us</a></li>
+              <li><i class="bi bi-dot"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bi bi-dot"></i> <a href="#">Privacy policy</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-2 col-md-6 footer-links social">
+            <ul>
+              <br>
+              <li><a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a></li>
+              <li><a href="#" class="telegram"><i class="bx bxl-telegram"></i></a></li>
+              <li><a href="#" class="facebook"><i class="bx bxl-facebook"></i></a></li>
+              <li><a href="#" class="instagram"><i class="bx bxl-instagram"></i></a></li>
+              <li><a href="#" class="twitter"><i class="bx bxl-twitter"></i></a></li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <div id="loader"></div>
+
+  <!-- External JavaScript -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+  </script>
+
+  <!-- Main JavaScript -->
+  <script src="./static/assets/js/main.js"></script>
+
 </body>
+
 </html>
