--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -41,6 +41,59 @@ body {
     text-decoration: none;
   }
   
+  /*----------------------------------------------------Loader*/
+  #loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999;
+    overflow: hidden;
+    background: var(--white);
+  }
+  
+  #loader:before {
+    content: "";
+    position: fixed;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+    border: 6px solid var(--blue);
+    border-top-color: var(--white);
+    border-bottom-color: var(--white);
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: animate-loader 1s linear infinite;
+    animation: animate-loader 1s linear infinite;
+  }
+  
+  @-webkit-keyframes animate-loader {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes animate-loader {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    [data-aos-delay] {
+      transition-delay: 0 !important;
+    }
+  }
+
   /*----------------------------------------------------Header*/
   #header {
     transition: all 0.5s;
