Add back to the top button

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -88,6 +88,7 @@ body {
     }
   }
   
+  /* disable for mobile devices */
   @media screen and (max-width: 768px) {
     [data-aos-delay] {
       transition-delay: 0 !important;
@@ -664,4 +665,35 @@ body {
   @keyframes fadeOut {
     0% { opacity: 1; }
     100% { opacity: 0; }
+  }
+
+  /*----------------------------------------------------Back to the top*/
+  .back-to-top {
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    right: 15px;
+    bottom: 15px;
+    z-index: 996;
+    background: #2487ce;
+    width: 40px;
+    height: 40px;
+    border-radius: 4px;
+    transition: all 0.4s;
+  }
+  
+  .back-to-top i {
+    font-size: 28px;
+    color: #fff;
+    line-height: 0;
+  }
+  
+  .back-to-top:hover {
+    background: #3e9bdd;
+    color: #fff;
+  }
+  
+  .back-to-top.active {
+    visibility: visible;
+    opacity: 1;
   }
