--- a/templates/base.html
+++ b/templates/base.html
@@ -110,6 +110,7 @@
   </footer><!-- End Footer -->
 
   <div id="loader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- External JavaScript -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
