--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -5,7 +5,7 @@
 
 :root {
   --blue: #357be0;
-  --lightblue: #469fdf;
+  --lightblue: #499ef5;
   --bluesmoke: #f8fbfe;
   --white: #fff;
   --dark: #124265;
@@ -334,7 +334,7 @@ body {
   }
   
   #hero .btn-hero:hover {
-    background: #3194db;
+    background: var(--lightblue);
   }
   
   .arrow {
@@ -386,7 +386,7 @@ body {
   }
   
   .section-bg {
-    background-color: #f8fbfe;
+    background-color: var(--bluesmoke);
   }
   
   .section-title {
@@ -400,7 +400,7 @@ body {
     text-transform: uppercase;
     margin-bottom: 20px;
     padding-bottom: 0;
-    color: #124265;
+    color: var(--dark);
   }
   
   .section-title p {
@@ -439,14 +439,14 @@ body {
   
   .about .content .btn-learn-more:hover {
     background: #2487ce;
-    color: #fff;
+    color: var(--white);
     text-decoration: none;
   }
 
   /*----------------------------------------------------Contact*/
   .contact .contact-form {
     width: 100%;
-    background: #fff;
+    background: var(--white);
   }
   
   .contact .contact-form .form-group {
@@ -455,7 +455,7 @@ body {
   
   .contact .contact-form .error-message {
     display: none;
-    color: #fff;
+    color: var(--white);
     background: #ed3c0d;
     text-align: left;
     padding: 15px;
@@ -468,7 +468,7 @@ body {
   
   .contact .contact-form .sent-message {
     display: none;
-    color: #fff;
+    color: var(--white);
     background: #18d26e;
     text-align: center;
     padding: 15px;
@@ -477,7 +477,7 @@ body {
   
   .contact .contact-form .loading {
     display: none;
-    background: #fff;
+    background: var(--white);
     text-align: center;
     padding: 15px;
   }
@@ -505,7 +505,7 @@ body {
   
   .contact .contact-form input:focus,
   .contact .contact-form textarea:focus {
-    border-color: #2487ce;
+    border-color: var(--lightblue);
   }
   
   .contact .contact-form input {
@@ -549,11 +549,32 @@ body {
     }
   }
 
+  /*----------------------------------------------------Search*/
+  #search {
+    background: url(../img/background.png);
+    height: 45vh;
+  }
+
+  .search-logo {
+    height: 150px;
+  }
+
+  .form-control:focus ~ #search-icon {
+   transform: scale(1.2);
+   transition: .15s ease-in-out,box-shadow .15s ease-in-out;
+   z-index: 5;
+  }
+
+  /*----------------------------------------------------Listings*/
+  #listings {
+    height: 50vh;
+  }
+
   /*----------------------------------------------------Footer*/
   #footer {
     color: #444444;
     font-size: 14px;
-    background: #f8fbfe;
+    background: var(--bluesmoke);
     box-shadow: 0px 2px 15px rgba(18, 66, 101, 0.08);
   }
   
@@ -585,7 +606,7 @@ body {
   #footer .footer-top h4 {
     font-size: 16px;
     font-weight: bold;
-    color: #124265;
+    color: var(--dark);
     position: relative;
     padding-bottom: 12px;
   }
@@ -627,7 +648,7 @@ body {
   
   #footer .footer-top .footer-links ul a:hover {
     text-decoration: none;
-    color: #2473ce;
+    color: var(--blue);
   }
   
   #footer .footer-top .social ul li a i:hover {
@@ -635,7 +656,7 @@ body {
   }
 
   #footer .footer-top .footer-links .social:hover {
-    color: #2487ce;
+    color: var(--blue);
     text-shadow: 2px 2px 2px #707c8f;
   }
 
@@ -675,7 +696,7 @@ body {
     right: 15px;
     bottom: 15px;
     z-index: 996;
-    background: #2487ce;
+    background: var(--lightblue);
     width: 40px;
     height: 40px;
     border-radius: 4px;
@@ -684,13 +705,13 @@ body {
   
   .back-to-top i {
     font-size: 28px;
-    color: #fff;
+    color: var(--white);
     line-height: 0;
   }
   
   .back-to-top:hover {
-    background: #3e9bdd;
-    color: #fff;
+    background: #3e88dd;
+    color: var(--white);
   }
   
   .back-to-top.active {
