--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -139,7 +139,7 @@ body {
   #small-img-logo {
     height:40px;
     width: 50px;
-    background: url('../img/apple-touch-icon.png') center center no-repeat;
+    background: url('../img/logo_small.png') center center no-repeat;
     background-size: cover;
     margin: 0 10px 5px 10px;
     opacity: 0;
@@ -342,7 +342,7 @@ body {
     text-align: center;
     color: #96aebe;
     font-size: 25px;
-    margin: -55px -6px 0;
+    margin: -40px -6px 0;
     opacity: 1;
   }
   
