--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="text-center">
-      <a href="{% url 'listings' %}" id="can_help" class="btn-hero scrollto">I can help</a>
+      <a href="{% url 'posts' %}" id="can_help" class="btn-hero scrollto">I can help</a>
       <a href="#need" id="need_help" class="btn-hero scrollto">I need help</a>
     </div>
   </div>
