--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -16,5 +16,40 @@
         </div>
 </section>
 <section id="listings">
+    <div class="col-10 mt-2 left">
+        <div class="row gx-2">
+            {% for post in post_list %}
+            <div class="col-xxl-2 col-xl-3 col-lg-4 col-md-5">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <div class="image-container">
+                            {% if "placeholder" in post.image.url %}
+                            <img class="card-img-top"
+                                src="https://picsum.photos/200/150">
+                            {% else %}
+                            <img class="card-img-top" src= {{ post.image.url }} alt="post image">
+                            {% endif %}
+                        </div>
+                        <a href="#" class="post-link">
+                            <h4 class="card-title mt-3">{{ post.title }}</h4>
+                        </a>
+                        <p class="subtitle text-muted p">{{ post.country.name }}, {{ post.city}}</p>
+                        <div class="author subtitle p"><i class='bx bxs-user-circle'></i><span> {{ post.author }} </span></div>
+                        <hr>
+                        <p class="card-text content fade-line">{{ post.text }}</p>
+                        <p class="card-text text-muted h6">{{ post.created_on}}</p>
+                        
+                    </div>
+                </div>
+            </div>
+            {% if forloop.counter|divisibleby:6 %}
+        </div>
+        <div class="row">
+            {% endif %}
+            {% endfor %}
+
+        </div>
+    </div>
+    
 </section>
 {% endblock %}
