--- a/templates/full.html
+++ b/templates/full.html
@@ -7,21 +7,25 @@
         <a href="{% url 'posts' %}" class="btn btn-outline-primary mb-3 mt-1"><<< Back to the list</a>
                 <div class="row">
                     <div class="col-lg-6">
+                        {% if "placeholder" in post.image.url %}
+                        <img class="card-img-top" style="opacity: 0.4; scale: 0.6;"
+                            src="{% static 'assets/img/logo.png' %}">
+                        {% else %}
                         <img src={{ post.image.url }} alt="">
-
+                        {% endif %}
                     </div>
                     <div class="col-lg-6">
                         <h2>{{ post.title }}</h2>
+                        <p class="card-text created text-muted h6">{{ post.created_on}}</p>
                         <hr>
                         <iframe width="500" height="300" style="border:0" loading="lazy" allowfullscreen
                             referrerpolicy="no-referrer-when-downgrade" src={{ maps }}>
                         </iframe>
                         <p class="subtitle text-muted p"><i class='bx bx-map'></i> {{ post.country.name }},
-                            {{ post.city}}</p>
+                            {{ post.city}}, {{ post.area }}</p>
                         <div class="author subtitle p"><i class='bx bxs-user-circle'></i><span> {{ post.author }}
                             </span></div>
-                        <hr>
-                        <p class="card-text text-muted h6">{{ post.created_on}}</p>
+
                         <hr>
                         <p>{{ post.text }}</p>
                         <button type="button" class="btn btn-primary">Contact {{post.author}}</button>
