--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -140,6 +140,11 @@ body {
   .img-logo {
     height: 35vh;
   }
+
+  #header #user-name {
+    color:rgba(28, 89, 131, 0.8);
+    font-size: 15px;
+  }
   
   #small-img-logo {
     height:40px;
@@ -166,7 +171,7 @@ body {
     padding: 0;
   }
   
-  .navbar ul {
+  .navbar ul, .auth-gr ul {
     margin: 0;
     padding: 0;
     display: flex;
@@ -176,11 +181,20 @@ body {
   
   .navbar li {
     position: relative;
+  }
 
+  .navbar ul li .auth {
+    color: rgb(73 9 138);
+    font-weight: 600;
+  }
+
+  .navbar ul li .auth:hover {
+    color: rgb(109 12 206);
   }
   
   .navbar a,
-  .navbar a:focus {
+  .navbar a:focus,
+  .auth {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -248,7 +262,7 @@ body {
     background: rgba(255, 255, 255, 70%);
     transition: 0.4s;
     z-index: 999;
-    height: 18em;
+    height: 23em;
     box-shadow: 0px 2px 6px 1px #e6ecf1;
   }
   
@@ -284,6 +298,7 @@ body {
   .navbar-mobile li:hover>a {
     color: var(--lightblue);
   }
+
   
   /*----------------------------------------------------Hero Section*/
   #hero {
@@ -815,5 +830,4 @@ body {
     width:300px;
     height:300px;
     z-index: 999;
-    margin-left: -10px;
 }
