--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
   <title>Help U</title>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
   <!-- Header -->
   <header id="header" class="fixed-top">
@@ -71,7 +71,7 @@
   </main><!-- End #main -->
 
   <!-- Footer -->
-  <footer id="footer">
+  <footer id="footer" class="mt-auto">
 
     <div class="footer-top">
       <div class="container">
