--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -297,8 +297,15 @@ body {
     color: var(--lightblue);
   }
 
-  
   /*----------------------------------------------------Hero Section*/
+
+#msg {
+  z-index: 999;
+  opacity: 0.65;
+  margin-bottom: -50px;
+}
+
+
   #hero {
     width: 100%;
     height: 95vh;
@@ -682,7 +689,8 @@ body {
 
     .login-block input {
       padding: 5px;
-      width: 230px;
+      border: 1.5px solid #e6ecf1;
+      border-radius: 5px;
     }
 
   /*----------------------------------------------------Footer*/
