--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,6 @@
       <div class="logo-wrapper">
         <h1 class="logo"><a href="{% url 'home' %}">Help U</a></h1>
         <span id="small-img-logo" class="d-none d-md-block"></span>
-
       </div>
 
       <!-- Navbar -->
@@ -60,9 +59,22 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
-
+    </div>
+    <div class="container-fluid gx-0">
+      <div class="row">
+        <div class="col-md-6 offset-md-3 mt-2">
+          {% for message in messages %}
+          <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+            {{ message | safe }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
     </div>
   </header><!-- End header -->
+
+
 
   {% block content %}
   <!-- Content  -->
@@ -128,17 +140,26 @@
   </footer><!-- End Footer -->
 
   <div id="loader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- External JavaScript -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+  </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
 
   <!-- Main JavaScript -->
   <script src="{% static 'assets/js/main.js' %}"></script>
-  
-</body>
 
+</body>
+<script>
+  setTimeout(function () {
+      let messages = document.getElementById('msg');
+      let alert = new bootstrap.Alert(messages);
+      alert.close();
+  }, 2500);
+</script>
 </html>
