--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -2,9 +2,8 @@
 {% load static %}
 
 {% block content %}
-
 <section id="search">
-    <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
+    <div class="container position-relative" data-aos="fade-down" data-aos-delay="100">
         <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-9 text-center">
                 <img class="search-logo my-4" src="{% static 'assets/img/logo.png' %}"
@@ -13,45 +12,65 @@
                     <input type="text" class="form-control" placeholder="Search">
                     <button id="search-icon" class="btn btn-primary" type="button"><i class='bx bx-search'></i></button>
                 </div>
+                <div class="mt-3">
+                    {% if 'posts/1/' in request.path %}
+                    <input type="checkbox" id="give" name="give" checked>
+                    {% else %}
+                    <input type="checkbox" id="give" name="give">
+                    {% endif %}
+                    <label for="give" class="pe-2">Offers</label>
+                    {% if 'posts/0/' in request.path %}
+                    <input type="checkbox" id="receive" name="receive" checked>
+                    {% else %}
+                    <input type="checkbox" id="receive" name="receive">
+                    {% endif %}
+                    <label for="receive" class="pe-5">Requests</label>
+                    <input type="checkbox" id="location" name="location">
+                    <label for="location">Near me</label>
+                </div>
             </div>
         </div>
 </section>
 <section id="listings">
-    <div class="col-10 mt-2 left">
+    <div class="col-10 mt-1 left">
         <div class="row gx-2">
             {% for post in post_list %}
             <div class="col-xxl-2 col-xl-3 col-lg-4 col-md-5">
                 <div class="card mb-3">
                     <div class="card-body">
                         <a href="{% url 'full' post.slug  %}">
-                        <div class="image-container">
-                            {% if "placeholder" in post.image.url %}
-                            <img class="card-img-top" style="opacity: 0.4; scale: 0.6;"
-                                src="{% static 'assets/img/logo_small.png' %}">
-                            {% else %}
-                            <img class="card-img-top" src={{ post.image.url }} alt="post image">
-                            {% endif %}
-                        </div>
+                            <div class="image-container">
+                                {% if "placeholder" in post.image.url %}
+                                <img class="card-img-top" style="opacity: 0.4; scale: 0.6;"
+                                    src="{% static 'assets/img/logo_small.png' %}">
+                                {% else %}
+                                <img class="card-img-top" src={{ post.image.url }} alt="post image">
+                                {% endif %}
+                            </div>
                             <h4 class="card-title mt-3">{{ post.title }}</h4>
                         </a>
                         <p class="subtitle text-truncate p"><i class='bx bx-map'></i>
-                            <a href="https://www.google.com/maps/place/{{post.city}}+{{post.country.name}}" target="_blank" class="geo"> {{ post.city}}, {{ post.country.name }} 
+                            <a href="https://www.google.com/maps/place/{{post.city}}+{{post.country.name}}"
+                                target="_blank" class="geo"> {{ post.city}}, {{ post.country.name }}
                                 <iframe class="preview" loading="lazy" allowfullscreen
-                                referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed/v1/place?key={{ key }}&q={{ post.city}}+{{ post.country.name }}&zoom=8">
-                            </iframe></a></p>
+                                    referrerpolicy="no-referrer-when-downgrade"
+                                    src="https://www.google.com/maps/embed/v1/place?key={{ key }}&q={{ post.city}}+{{ post.country.name }}&zoom=8">
+                                </iframe></a></p>
                         {% if post.area != None %}
                         <p class="subtitle text-muted p"><i class='bx bx-building-house'></i>{{ post.area }}</p>
                         {% else %}
                         <p class="subtitle text-muted p"><i class='bx bx-building-house'></i> ... </p>
                         {% endif %}
-                        <div class="author subtitle p"><i class='bx bxs-user-circle'></i><span> {{ post.author }} </span></div>
+                        <div class="author subtitle p"><i class='bx bxs-user-circle'></i><span> {{ post.author }}
+                            </span></div>
                         <hr>
                         <p class="card-text content fade-line">{{ post.text }}</p>
                         <p class="card-text text-muted h6">{{ post.created_on}}</p>
-                        
+
                     </div>
                 </div>
             </div>
+
             {% if forloop.counter|divisibleby:6 %}
         </div>
         <div class="row">
@@ -60,6 +79,7 @@
 
         </div>
     </div>
-    
+
 </section>
+
 {% endblock %}
