--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load cloudinary %}
 
 {% block content %}
 <section id="search">
@@ -13,13 +14,13 @@
                     <button id="search-icon" class="btn btn-primary" type="button"><i class='bx bx-search'></i></button>
                 </div>
                 <div class="mt-3">
-                    {% if 'posts/1/' in request.path %}
+                    {% if 'posts/1/' in request.path or 'posts/10/' in request.path %}
                     <input type="checkbox" id="give" name="give" checked>
                     {% else %}
                     <input type="checkbox" id="give" name="give">
                     {% endif %}
                     <label for="give" class="pe-2">Offers</label>
-                    {% if 'posts/0/' in request.path %}
+                    {% if 'posts/0/' in request.path or 'posts/10/' in request.path %}
                     <input type="checkbox" id="receive" name="receive" checked>
                     {% else %}
                     <input type="checkbox" id="receive" name="receive">
@@ -32,10 +33,10 @@
         </div>
 </section>
 <section id="listings">
-    <div class="col-10 mt-1 left">
+    <div class="col-10  left">
         <div class="row gx-2">
             {% for post in post_list %}
-            <div class="col-xxl-2 col-xl-3 col-lg-4 col-md-5">
+            <div class="col-xxl-2 col-xl-3 col-lg-4 col-sm-6">
                 <div class="card mb-3">
                     <div class="card-body">
                         <a href="{% url 'full' post.slug  %}">
@@ -44,14 +45,14 @@
                                 <img class="card-img-top" style="opacity: 0.4; scale: 0.6;"
                                     src="{% static 'assets/img/logo_small.png' %}">
                                 {% else %}
-                                <img class="card-img-top" src={{ post.image.url }} alt="post image">
+                                <img class="card-img-top" src={{ post.image.url }}>
                                 {% endif %}
                             </div>
-                            <h4 class="card-title mt-3">{{ post.title }}</h4>
+                            <h4 class="card-title mt-3 text-truncate" title="{{ post.title }}">{{ post.title }}</h4>
                         </a>
                         <p class="subtitle text-truncate p"><i class='bx bx-map'></i>
                             <a href="https://www.google.com/maps/place/{{post.city}}+{{post.country.name}}"
-                                target="_blank" class="geo"> {{ post.city}}, {{ post.country.name }}
+                                target="_blank" class="geo" title="{{ post.city}}, {{ post.country.name }}"> {{ post.city}}, {{ post.country.name }}
                                 <iframe class="preview" loading="lazy" allowfullscreen
                                     referrerpolicy="no-referrer-when-downgrade"
                                     src="https://www.google.com/maps/embed/v1/place?key={{ key }}&q={{ post.city}}+{{ post.country.name }}&zoom=8">
@@ -64,17 +65,17 @@
                         <div class="author subtitle p"><i class='bx bxs-user-circle'></i><span> {{ post.author }}
                             </span></div>
                         <hr>
-                        <p class="card-text content fade-line">{{ post.text }}</p>
-                        <p class="card-text text-muted h6">{{ post.created_on}}</p>
+                        <p class="card-text content line-clamp">{{ post.text }}</p>
+                        <p class="card-text text-muted h6 text-truncate">{{ post.created_on }}</p>
 
                     </div>
                 </div>
             </div>
 
-            {% if forloop.counter|divisibleby:6 %}
-        </div>
-        <div class="row gx-2">
-            {% endif %}
+            <!-- {% if forloop.counter|divisibleby:6 %} -->
+        <!-- </div> -->
+        <!-- <div class="row gx-2"> -->
+            <!-- {% endif %} -->
             {% endfor %}
 
         </div>
