--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -627,7 +627,7 @@ body {
   }
 
   #listings .card-img-top {
-    aspect-ratio: 4/3;
+    aspect-ratio: 1/1;
   }
 
   .subtitle {
@@ -649,23 +649,15 @@ body {
   #listings .card .card-body p.h6{
     font-size: 14px;
     margin-bottom: auto;
+    letter-spacing: -0.5px;
   }
 
-  .fade-line {
-    position: relative;
-    height: 4.5em; 
+  .line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;  
     overflow: hidden;
-  }
-
-  .fade-line::after {
-    content: "";
-    text-align: right;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 80%;
-    height: 1.5em;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
+    height: 4.5em;
   }
 
   /*----------------------------------------------------Full Post Page*/
