--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <section id="search">
-    <div class="container position-relative" data-aos="fade-down" data-aos-delay="100">
+    <div class="container position-relative" data-aos="fade-down" data-aos-duration="500">
         <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-9 text-center">
                 <img class="search-logo my-4" src="{% static 'assets/img/logo.png' %}"
@@ -71,11 +71,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- {% if forloop.counter|divisibleby:6 %} -->
-        <!-- </div> -->
-        <!-- <div class="row gx-2"> -->
-            <!-- {% endif %} -->
             {% endfor %}
 
         </div>
@@ -123,7 +118,30 @@
         </nav>
     {% endif %}
     </div>
-
 </section>
+<script type="text/javascript">
+    $('#receive').on('change', function() {
+        if ($(this).not(':checked') && ($('#give').is(':checked'))) {
+            document.location.href = "{% url 'posts' 1 %}"
+        }
+        if ($(this).is(':checked') && ($('#give').not(':checked'))) {
+            document.location.href = "{% url 'posts' 0 %}"
+        }
+        if ($(this).is(':checked') && ($('#give').is(':checked'))) {
+            document.location.href = "{% url 'posts' 10 %}"
+        }
 
+        })
+    $('#give').on('change', function() {
+        if ($(this).not(':checked') && ($('#receive').is(':checked'))) {
+            document.location.href = "{% url 'posts' 0 %}"
+        }
+        if ($(this).is(':checked') && ($('#receive').not(':checked'))) {
+            document.location.href = "{% url 'posts' 1 %}"
+        }
+        if ($(this).is(':checked') && ($('#receive').is(':checked'))) {
+            document.location.href = "{% url 'posts' 10 %}"
+        }
+        })
+</script>
 {% endblock %}
