Add FAQ section to home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,10 @@
   <!-- Main CSS -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
   crossorigin="anonymous"></script>
+
   <title>Help U</title>
 </head>
 
